force-app/main/default/objects/Lease_Contract__c/Lease_Contract__c.object-meta.xml
<CustomObject>
    <label>Lease Contract</label>
    <nameField>
        <displayFormat>LCN-{000000}</displayFormat>
        <label>Lease Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>