force-app/main/default/objects/Lease_Contract__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Lease Contracts</relationshipLabel>
    <relationshipName>Lease_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>