force-app/main/default/objects/Lease_Contract__c/fields/Flat__c.field-meta.xml
<CustomField>
    <fullName>Flat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flat</label>
    <referenceTo>Flat__c</referenceTo>
    <relationshipLabel>Lease Contracts</relationshipLabel>
    <relationshipName>Lease_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>