force-app/main/default/objects/Lease_Contract__c/fields/No_of_Days_Left__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Left__c</fullName>
    <formula>IF(  ISPICKVAL( Status__c , &apos;Check In&apos;)  &amp;&amp;  (TODAY()  &gt;=  Start_Date__c) ,   
(End_Date__c - TODAY())  ,  0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>