force-app/main/default/objects/Lease_Contract__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>