force-app/main/default/objects/Lease_Contract__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <formula>&apos;RM&apos; + TEXT( Floor__c ) + &apos;-&apos; + TEXT(Room__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Number</label>
    <type>Text</type>
</CustomField>