force-app/main/default/objects/Lease_Contract__c/fields/Tenant_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Name__c</fullName>
    <label>Tenant Name</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Lease Contracts</relationshipLabel>
    <relationshipName>Lease_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>