force-app/main/default/objects/Lease_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tenant_Name__c</columns>
    <columns>Building__c</columns>
    <columns>Flat__c</columns>
    <columns>Room_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>No_of_Days_Left__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>